--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,9 +25,10 @@
             <div class="card-header">
                 <h3>Sign In</h3>
                 <div class="d-flex justify-content-end social_icon">
-                    <span><i class="fab fa-facebook-square"></i></span>
-                    <span><i class="fab fa-google-plus-square"></i></span>
-                    <span><i class="fab fa-twitter-square"></i></span>
+
+                    <span><a class="fab fa-google-plus-square" href="https://accounts.google.com/o/oauth2/auth?scope=email&redirect_uri=http://localhost:4200/login-google&response_type=code
+		&client_id=80724656105-fg2ndheoujm7c7dd4ob1i9mq3ebdbjhb.apps.googleusercontent.com&approval_prompt=force"></a></span>
+
                 </div>
             </div>
             <div class="card-body">
